# clean_architecture

./: .gitignore  Dockerfile  pyproject.toml  setup.py
applications/common/: command.py
clean_architecture/api/consumers/: another_run.py  run.py
clean_architecture/api/http/: run.py
clean_architecture/applications/: __init__.py  event_integrated_handler.py  mediator.py
clean_architecture/applications/common/: command.py  constants.py  mediator.py  repository.py
clean_architecture/domains/account/: account.py
clean_architecture/domains/balance/: balance.py
clean_architecture/domains/common/: exception.py
clean_architecture/infrastructure/: __init__.py
clean_architecture/infrastructure/common/: authentication.py
clean_architecture/infrastructure/producers/: _producer.py  kafka_another_producer.py  kafka_internal_producer.py
domains/: __init__.py
domains/common/: based_entity.py  based_event.py  executable.py
infrastructure/common/: repository.py
src/: __init__.py
src/api/: __init__.py
src/api/consumers/: __init__.py  another_run.py  billing_run.py  run.py
src/api/http/: __init__.py  run.py
src/applications/: __init__.py  event_integrated_handler.py  mediator.py
src/applications/account/: __init__.py
src/applications/common/: __init__.py  authentication.py  command.py  integrated_event.py  mediator.py  repository.py
src/applications/event_handlers/: __init__.py  mediator.py  sample_event_handler.py
src/domains/: __init__.py
src/domains/account/: __init__.py  (+1 more)
src/infrastructure/: __init__.py
tests/units/: account.py  balance.py
(+202 files in other folders)
