[tool.poetry]
name = "advanced-billing"
version = "0.1.0"
description = ""
authors = ["dungpq <dungphanquang@vccorp.vn>"]
readme = "README.md"
packages = [{include = "advanced_billing"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
