[tool.poetry]
name = "clean_architecture"
version = "0.1.0"
description = ""
authors = ["dungpq <dungphanquang@vccorp.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
