[tool.poetry]
name = "clean_architecture"
version = "0.1.0"
description = ""
authors = ["dungpq <dungphanquang@vccorp.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
fastapi = "^0.95.1"
python-decouple = "^3.6"
beanie = "^1.13.0"
uvicorn = "^0.19.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pyjwt = "^2.7.0"
inflect = "^6.0.4"
kafka-python = "2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
